apps/production/skool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mount-holder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mount-holder

  template:
    metadata:
      labels:
        app: mount-holder
        try: "0"
        policy-type: "app"

    spec:
      containers:
        - name: mount-holder
          image: nginx

          securityContext:
            allowPrivilegeEscalation: false

          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true

      restartPolicy: Always

      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kv-secrets
            nodePublishSecretRef: # Only required when using service principal mode
              name: secrets-store-creds # Only required when using service principal mode
